--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "firebase": "^11.0.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
+    "mongodb": "^6.11.0",
     "next": "13.5.1",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
