--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "mongodb": "^6.11.0",
+    "mongoose": "^8.8.4",
     "next": "13.5.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
